syncdoc-core/tests/snapshots/token_processors_test__async_function_processing.snap
---
source: syncdoc-core/tests/token_processors_test.rs
expression: result
---
#![doc = include_str!("../docs/lib.md")]

    

    use syncdoc::omnidoc;

    #[omnidoc(path = "docs")]
    
async fn hello() {
    println!("world");
}
