syncdoc-core/tests/snapshots/token_processors_test__basic_function_processing.snap
---
source: syncdoc-core/tests/token_processors_test.rs
expression: "test_with_code(\"test_basic_function_processing\", code)"
---
#![doc = include_str!("../docs/lib.md")]

use syncdoc::omnidoc;

#[omnidoc(path = "docs")]

fn hello() {
    println!("world");
}
