syncdoc-core/tests/snapshots/token_processors_test__impl_block_processing.snap
---
source: syncdoc-core/tests/token_processors_test.rs
expression: result
---
#![doc = include_str!("../docs/lib.md")]

struct MyStruct;

use syncdoc::omnidoc;

#[omnidoc(path = "docs")]

impl MyStruct {
    fn method(&self) {
        println!("method");
    }
}
