syncdoc-core/tests/snapshots/token_processors_test__impl_with_generics.snap
---
source: syncdoc-core/tests/token_processors_test.rs
expression: result
---
#![doc = include_str!("../docs/lib.md")]

pub struct GenericStruct<T> { _inner: std::marker::PhantomData<T> }

use syncdoc::omnidoc;

#[omnidoc(path = "docs")]

impl<T> GenericStruct<T>
where
    T: Clone,
{
    fn process(&self, value: T) -> T {
        value.clone()
    }
}
