syncdoc-core/tests/snapshots/token_processors_test__nested_impl_in_module.snap
---
source: syncdoc-core/tests/token_processors_test.rs
expression: result
---
#![doc = include_str!("../docs/lib.md")]

    pub struct MyStruct;

    use syncdoc::omnidoc;

    #[omnidoc(path = "docs")]
    
mod my_module {
    use crate::MyStruct;

    impl MyStruct {
        fn module_method(&self) {}
    }
}
