syncdoc-core/tests/snapshots/token_processors_test__nested_module_path_construction.snap
---
source: syncdoc-core/tests/token_processors_test.rs
expression: result
---
#![doc = include_str!("../docs/lib.md")]

    

    use syncdoc::omnidoc;

    #[omnidoc(path = "docs")]
    
mod outer {
    fn outer_fn() {}

    mod inner {
        fn inner_fn() {}
    }
}
